--- a/hongdo_ros_web/scripts/public/scss/drawn_style.scss
+++ b/hongdo_ros_web/scripts/public/scss/drawn_style.scss
@@ -64,6 +64,21 @@ body {
               object-fit: contain;
             }
           }
+
+          .camera_bg {
+            width: 86%;
+            left: 7%;
+            height: 80%;
+            top: 6%;
+            position: absolute;
+            z-index: 4;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+            }
+          }
       }
 
       .duru1 {
