--- a/hongdo_ros_web/scripts/public/css/drawn_style.css
+++ b/hongdo_ros_web/scripts/public/css/drawn_style.css
@@ -80,6 +80,19 @@ body main .duru .duru2 .img img {
   height: 100%;
   object-fit: contain;
 }
+body main .duru .duru2 .camera_bg {
+  width: 86%;
+  left: 7%;
+  height: 80%;
+  top: 6%;
+  position: absolute;
+  z-index: 4;
+}
+body main .duru .duru2 .camera_bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 body main .duru .duru1 {
   width: 100%;
   height: 5vh;
