--- a/hongdo_ros_web/scripts/public/css/upload_style.css
+++ b/hongdo_ros_web/scripts/public/css/upload_style.css
@@ -194,6 +194,23 @@ body main .duru .duru2 .display video {
   top: 0vh;
   object-fit: fill;
 }
+body main .duru .duru2 .camera_bg {
+  z-index: 3;
+  position: absolute;
+  top: 8vh;
+  left: 2.6vw;
+  width: 38.9vw;
+  height: 38.9vw;
+  overflow: hidden;
+}
+body main .duru .duru2 .camera_bg img {
+  position: absolute;
+  width: 68.4vw;
+  height: 38.5vw;
+  left: -14.95vw;
+  top: 0vh;
+  object-fit: contain;
+}
 body main .duru .duru1 {
   width: 100%;
   height: 5vh;
