--- a/hongdo_ros_web/scripts/public/scss/select_pic_style.scss
+++ b/hongdo_ros_web/scripts/public/scss/select_pic_style.scss
@@ -70,6 +70,26 @@ body {
                     object-fit: contain;
                   }
                 }
+
+                .camera_bg {
+                    z-index: 3;
+                    position: absolute;
+                    top: 8vh;
+                    left: 2.8vw;
+                    width: 38.5vw;
+                    height: 38.5vw;
+                    overflow: hidden;
+                    // border: 1px solid red;
+    
+                    img {
+                      position: absolute;
+                      width: 68.4vw;
+                      height: 38.5vw;
+                      left: -14.95vw;
+                      top: 0vh;
+                      object-fit: contain;
+                    }
+                  }
             }
   
             .duru1 {
