--- a/hongdo_ros_web/scripts/public/scss/upload_style.scss
+++ b/hongdo_ros_web/scripts/public/scss/upload_style.scss
@@ -178,6 +178,27 @@ body {
                   object-fit: fill;
                 }
               }
+
+              .camera_bg {
+                z-index: 3;
+                position: absolute;
+                top: 8vh;
+                left: 2.6vw;
+                width: 38.9vw;
+                height: 38.9vw;
+                overflow: hidden;
+                // border: 1px solid red;
+
+                img {
+                  position: absolute;
+                  // transform: scaleX(-1);
+                  width: 68.4vw;
+                  height: 38.5vw;
+                  left: -14.95vw;
+                  top: 0vh;
+                  object-fit: contain;
+                }
+              }
           }
 
           .duru1 {
