--- a/hongdo_ros_web/scripts/public/css/index_style.css
+++ b/hongdo_ros_web/scripts/public/css/index_style.css
@@ -47,6 +47,33 @@ main .bg img {
   height: 100%;
   object-fit: fill;
 }
+main .skip {
+  width: 10%;
+  height: 10%;
+  left: -2%;
+  bottom: 1%;
+  position: absolute;
+  z-index: 4;
+}
+main .skip img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+main .skip_click {
+  width: 10%;
+  height: 10%;
+  left: -2%;
+  bottom: 1%;
+  position: absolute;
+  z-index: 4;
+  animation: click_motion 0.5s linear;
+}
+main .skip_click img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 main video {
   width: 100%;
   height: 100%;
