--- a/hongdo_ros_web/scripts/public/scss/index_style.scss
+++ b/hongdo_ros_web/scripts/public/scss/index_style.scss
@@ -26,6 +26,37 @@ main {
             object-fit: fill;
         }
     }
+
+    .skip {
+        width: 10%;
+        height: 10%;
+        left: -2%;
+        bottom: 1%;
+        position: absolute;
+        z-index: 4;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .skip_click {
+        width: 10%;
+        height: 10%;
+        left: -2%;
+        bottom: 1%;
+        position: absolute;
+        z-index: 4;
+        animation: click_motion 0.5s linear;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
     
     video {
         width: 100%;
