--- a/hongdo_ros_web/scripts/public/scss/intro_style.scss
+++ b/hongdo_ros_web/scripts/public/scss/intro_style.scss
@@ -3,6 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=East+Sea+Dokdo:400');
 
 body {
     width: 100%;
@@ -12,6 +13,39 @@ body {
     main {
         width: 100%;
         height: 100%;
+
+        .title {
+            width: 70%;
+            height: 50%;
+            position: absolute;
+            top: 20%;
+            left: 15%;
+            color: #000;
+            font: 28vh "East Sea Dokdo";
+            z-index: 5;
+
+            .a1 {
+                width: 100%;
+                height: 100%;
+                bottom: 13vh;
+                right: 8vw;
+                position: absolute;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .a2 {
+                width: 100%;
+                height: 100%;
+                top: 8vh;
+                left: 5vw;
+                position: absolute;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
 
         .intro {
             width: 100%;
@@ -32,14 +66,14 @@ body {
             width: 80vw;
             height: 20vh;
             left: 10vw;
-            top: 60vh;
+            top: 67vh;
             z-index: 3;
             position: absolute;
             display: flex;
             align-items: center;
             justify-content: center;
             font-family: 'Noto Sans KR', sans-serif;
-            color: #fff;
+            color: #000;
         }
 
         .click {
@@ -53,7 +87,7 @@ body {
             align-items: center;
             justify-content: center;
             font: 7vh "Nanum Brush Script";
-            color: #fff;
+            color: #000;
             animation: fadein_out 3s ease-in-out infinite;
         }
 
